--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "fullcalendar": "^3.9.0",
     "howler": "^2.0.15",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
