--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "howler": "^2.0.15",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "swiper": "^4.4.6",
     "vue": "^2.5.17",
     "vue-baidu-map": "^0.21.14",
     "vue-router": "^3.0.1"
