--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "fullcalendar": "^3.9.0",
     "howler": "^2.0.15",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "swiper": "^4.4.6",
     "vue": "^2.5.17",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-baidu-map": "^0.21.14",
     "vue-router": "^3.0.1"
   },
