--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "strftime": "^0.10.0",
     "swiper": "^4.4.6",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
