--- a/package.json
+++ b/package.json
@@ -10,33 +10,29 @@
   },
   "dependencies": {
     "babel": "^6.23.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "fullcalendar": "^3.9.0",
-    "howler": "^2.0.15",
-    "jquery": "^3.3.1",
-    "moment": "^2.24.0",
-    "node-sass": "^4.10.0",
-    "strftime": "^0.10.0",
+    "bootstrap-vue": "^2.0.0-rc.20",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
     "swiper": "^4.4.6",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-baidu-map": "^0.21.14",
-    "vue-router": "^3.0.1"
+    "vue-baidu-map": "^0.21.20",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@vue/cli-plugin-babel": "^3.1.0",
-    "@vue/cli-plugin-eslint": "^3.1.4",
-    "@vue/cli-service": "^3.1.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.2",
     "file-loader": "^3.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -45,7 +41,7 @@
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   }
 }
