--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
   },
   "dependencies": {
     "babel": "^6.23.0",
-    "bootstrap-vue": "^2.0.0-rc.20",
+    "bootstrap-vue": "^2.0.4",
     "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
-    "swiper": "^4.4.6",
+    "node-sass": "^4.13.0",
+    "swiper": "^4.5.1",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-baidu-map": "^0.21.20",
-    "vue-router": "^3.0.6"
+    "vue-baidu-map": "^0.21.22",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "vue-loader": "^15.7.0",
+    "vue-loader": "^15.7.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
